chore: restructure the docs